Restructure docs of RWKV  Inference tools
Restructure docs of RWKV  Inference tools, fixed some typo and add Ai00 inference tutorials

Signed-off-by: Rocky Luo <qilongluo@rwkvos.com>

--- a/docs/inference/ai00.md
+++ b/docs/inference/ai00.md
@@ -1,4 +1,4 @@
-# Ai00
+# Ai00 Inference
 
 ## Introduction
 
@@ -48,7 +48,7 @@ Test environment:
 All layers are quantized by default. The higher the number of quantized layers, the lower the VRAM usage, but the performance of the model may deteriorate.
 :::
 
-## Download/Convert RWKV Model
+### Download/Convert RWKV Model
 
 The Ai00 Server currently only supports Safetensors models with the `.st` file extension. There are two ways to obtain a `.st` model.
 
@@ -176,7 +176,7 @@ If you set `tls = true` in the config file, please visit `https://localhost:6553
 
 ![Ai00-homepage](./imgs-of-Ai00/Ai00-homepage.png)
 
-## Adjust the Decoding Parameters on the Right
+### Adjust the Decoding Parameter
 
 There are some model decoding parameters that can be set on the right side of the Web page, such as `Temperature`, `Top_P`, `Presence Penalty`, and `Frequency Penalty`. Adjusting these parameters will affect the generation results of the model.
 
@@ -191,7 +191,7 @@ The effects corresponding to the parameters are as follows:
 | `max_tokens` | The maximum number of tokens when the model generates text, which can be understood as "the maximum number of characters the model can generate at one time". |
 
 ::: tip
-For a more detailed explanation of the decoding parameters and parameter recommendations, refer to [RWKV's Decoding Parameters](https://wiki.rwkv.com/RWKV-Prompts/RWKV-Parameters).
+For a more detailed explanation of the decoding parameters and parameter recommendations, refer to [RWKV's Decoding Parameters](../basic/decoding-parameters.md).
 :::
 
 ## Advanced Features
@@ -356,8 +356,6 @@ When using the RWKV model in the `.prefab` format, there is no need to specify t
 :::
 
 ## API Documentation of Ai00
-
-import { Callout } from 'nextra/components'
 
 The following is the API documentation of Ai00, which contains detailed descriptions of all APIs.
 
@@ -899,7 +897,7 @@ Explanation of the Return Result:
 
 ![admin/model/save](./imgs-of-Ai00/admin-models-save-terminal.png)
 
-## admin/models/state/load
+### admin/models/state/load
 
 **API Function**: Mount the state file at the specified path.
 
@@ -1144,5 +1142,3 @@ A: No, it doesn't. AI00 supports Vulkan as the inference backend. It once suppor
 ![alt text](./imgs-of-Ai00/ai00-qa1.png)
 
 A: Once shared video memory is used, the running speed will be 20 times slower. This is due to the working principle of computer hardware and is not a bug.
-
-If you encounter other problems, you are welcome to join the RWKV QQ group 224287095 or the Ai00 QQ group 30920262 to ask questions.
