Update docs of 《how to play》
Update docs about how to play the RWKV model ,such as Online Demo and Ai00..etc

Signed-off-by: Rocky Luo <qilongluo@rwkvos.com>

--- a/docs/inference/ai00.md
+++ b/docs/inference/ai00.md
@@ -1137,8 +1137,8 @@ A: This is because the device lacks the Vulkan driver. Please install the latest
 
 A: No, it doesn't. AI00 supports Vulkan as the inference backend. It once supported Dx12/openGL, but it does not support CUDA drivers.
 
-**Why does it seem that the speed becomes slower after I use shared video memory?**
+**Why does it seem that the speed becomes slower after I use shared VRAM?**
 
 ![alt text](./imgs-of-Ai00/ai00-qa1.png)
 
-A: Once shared video memory is used, the running speed will be 20 times slower. This is due to the working principle of computer hardware and is not a bug.
+A: Once shared VRAM is used, the running speed will be 20 times slower. This is due to the working principle of computer hardware and is not a bug.
